# bg3-modding-utilities

./: Cargo.toml
src/: lib.rs  main.rs  pak.rs  stat.rs
