[package]
name = "bg3-unpacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
lz4_flex = "0.11"
env_logger = "0.10.0"
log = "0.4.20"
clap = { version = "4.4.7", features = ["derive"] }
